--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.iconscout.com/icon/premium/png-512-thumb/digital-wallet-icon-svg-download-png-4037759.png?f=webp&w=512" />  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wallet-frontend</title>
+        <!-- ✅ SEO META TAGS -->
+    <title>WalletApp - Secure Digital Wallet & Money Management</title>
+    <meta name="description" content="Manage your money effortlessly with WalletApp. Instant transfers, spending analytics, low balance alerts, and secure digital wallet. Start today!" />
+    <!-- <title>wallet-frontend</title> -->
   </head>
   <body>
     <div id="root"></div>
